<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/_fon_text_and_all"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/header_layout_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/_fon_header"
        android:paddingLeft="2dp"
        android:paddingRight="2dp"
        android:paddingBottom="2dp"
        android:paddingTop="2dp"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    <ImageView
        android:id="@+id/header_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/bs"
        android:contentDescription="@string/home_page_bs_image_description"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/home_page_greeting"
            android:textSize="20dp"
            android:textColor="@color/_fon_text_and_all"
            android:textStyle="italic"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <!--<Button
            android:id="@+id/button_in"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="@string/home_page_name_button_entry">
        </Button>-->
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_layout_title"
        app:layout_constraintVertical_bias="0.0">

        <com.google.android.flexbox.FlexboxLayout
            android:clipChildren="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:alignContent="stretch"
            app:alignItems="stretch"
            app:flexWrap="wrap">

            <LinearLayout
                android:id="@+id/page_free_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:background="@color/_fon_images"
                app:layout_flexBasisPercent="43%">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/_01_free_product"/>
<!--
                <View
                    android:id="@+id/anim_opacity_block"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginEnd="50dp"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@color/black" />
-->
                <TextView
                    android:id="@+id/textview1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:text="@string/free_product" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/page_kids_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:background="@color/_fon_images"
                app:layout_flexBasisPercent="43%">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/_02_kids_product"/>
<!--
                <View
                    android:id="@+id/anim_size_block"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginEnd="50dp"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@color/white" />
-->
                <TextView
                    android:id="@+id/textview2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:text="@string/kids_product" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/page_chlotes_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:background="@color/_fon_images"
                app:layout_flexBasisPercent="43%">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/_03_chlotes_product"/>
<!--
                <View
                    android:id="@+id/anim_size2_block"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginEnd="50dp"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@color/white" />
-->
                <TextView
                    android:id="@+id/textview4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:text="@string/clothes_product" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/page_home_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:background="@color/_fon_images"
                app:layout_flexBasisPercent="43%">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/_04_home_product"/>
<!--
                <View
                    android:id="@+id/anim_arc_block"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginEnd="50dp"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@color/black" />
-->
                <TextView
                    android:id="@+id/textview5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:text="@string/home_product" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/page_cars_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:background="@color/_fon_images"
                app:layout_flexBasisPercent="43%">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/_05_cars_product"/>
<!--
                <ImageView
                    android:id="@+id/anim_bell_block"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="80dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    app:tint="@color/black"
                    app:srcCompat="@android:drawable/ic_popup_reminder" />
-->
                <TextView
                    android:id="@+id/textview6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:text="@string/cars_product" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/page_mobile_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:background="@color/_fon_images"
                app:layout_flexBasisPercent="43%">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/_06_mobile_product"/>
<!--
                <View
                    android:id="@+id/anim_move_block"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginEnd="50dp"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@color/white" />
-->
                <TextView
                    android:id="@+id/textview7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:text="@string/mobile_product" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/page_all_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:background="@color/_fon_images"
                app:layout_flexBasisPercent="100%">

                <!--
                <View
                    android:id="@+id/anim_combo_block"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginEnd="50dp"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@color/_fon_header" />
-->
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/_08_all_category" />

                <TextView
                    android:id="@+id/textview8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:text="@string/all_product" />

            </LinearLayout>

        </com.google.android.flexbox.FlexboxLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>